@@ -19,7 +19,7 @@
 ################################################################################
 # Constants
 
-VERSION=1.110.0
+VERSION=1.111.0
 SHORTNAME="SSL_CERT"
 
 VALID_ATTRIBUTES=",startdate,enddate,subject,issuer,serial,modulus,serial,hash,email,ocsp_uri,fingerprint,"
@@ -118,6 +118,7 @@ usage() {
     echo "      --no_tls1_1                  disable TLS version 1.1"
     echo "      --no_tls1_2                  disable TLS version 1.2"
     echo "      --no_tls1_3                  disable TLS version 1.3"
+    echo "      --not-valid-longer-than days critical if the certificate validity is longer than the specified period"
     echo "   -N,--host-cn                    match CN with the host name"
     echo "      --ocsp-critical hours        minimum number of hours an OCSP response has to be valid to"
     echo "                                   issue a critical status"
@@ -903,6 +904,10 @@ main() {
     DANE=""
     DISALLOWED_PROTOCOLS=""
 
+    # after 2020-09-01 we could set the default to 398 days because of Apple
+    # https://support.apple.com/en-us/HT211025
+    NOT_VALID_LONGER_THAN=""
+
     # Set the default temp dir if not set
     if [ -z "${TMPDIR}" ] ; then
         TMPDIR="/tmp"
@@ -1177,6 +1182,11 @@ main() {
                 fi
                 shift 2
                 ;;
+	    --not-valid-longer-than)
+		check_option_argument '--not-valid-longer-than' "$2"
+		NOT_VALID_LONGER_THAN=$2
+		shift 2
+		;;
             --ocsp-critical)
                 check_option_argument '--ocsp-critical' "$2"
                 OCSP_CRITICAL="$2"
@@ -1486,6 +1496,18 @@ main() {
         fi
 
     fi
+
+    if [ -n "${NOT_VALID_LONGER_THAN}" ] ; then
+	
+	if [ -n "${DEBUG}" ] ; then
+            echo "[DBG] --not-valid-longer-than specified: ${NOT_VALID_LONGER_THAN}"
+        fi
+
+        if ! echo "${NOT_VALID_LONGER_THAN}" | grep -q '^[0-9][0-9]*$' ; then
+            unknown "invalid number of days ${NOT_VALID_LONGER_THAN}"
+        fi
+
+    fi	
 
     if [ -n "${TMPDIR}" ] ; then
 
@@ -2550,7 +2572,25 @@ main() {
                 fi
 
             fi
-	    
+
+	    if [ -n "${NOT_VALID_LONGER_THAN}" ] ; then
+
+                if [ -n "${DEBUG}" ] ; then
+                    echo "[DBG] checking if the certificate is valid longer than ${NOT_VALID_LONGER_THAN} days"
+		    echo "[DBG]   valid for ${DAYS_VALID} days"
+                fi
+
+		if [ "${DAYS_VALID}" -gt "${NOT_VALID_LONGER_THAN}" ] ; then
+
+		    if [ -n "${DEBUG}" ] ; then
+			echo "[DBG] Certificate expires in ${DAYS_VALID} days which is more than ${NOT_VALID_LONGER_THAN} days"
+                    fi
+		    
+		    prepend_critical_message "Certificate expires in ${DAYS_VALID} days which is more than ${NOT_VALID_LONGER_THAN} days"
+		fi		
+		
+	    fi
+
         elif [ "${OPENSSL_COMMAND}" = "crl" ]; then
 	    
             # CRL certificates
