@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii check_ssl_cert.1
 .\"
-.TH "check_ssl_cert" 1 "January, 2020" "1.110.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "March, 2020" "1.111.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -138,6 +138,9 @@ disable TLS version 1.3
 .TP
 .BR "   --no_tls1_2"
 disable TLS version 1.2
+.TP
+.BR "   --not-valid-longer-than" " days"
+critical if the certificate validity is longer than the specified period
 .TP
 .BR "-N,--host-cn"
 match CN with the host name
